# mail_analyzer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
analyzer/: __init__.py  context_analyzer.py  email_controller.py  email_scanner.py  feedback_learner.py  local_ai_handler.py  ml_analyzer.py  proactive_defense.py  report_controller.py  report_generator.py  report_scheduler.py  threat_analyzer.py  threat_clustering.py  threat_intelligence.py  traffic_light.py  update_manager.py  utils.py
analyzer/email_clients/: __init__.py  base.py  exchange.py  gmail.py  outlook.py
analyzer/ml/: local_ai_handler.py
analyzer/reporting/: report_generator.py  report_scheduler.py
analyzer/threat/: __init__.py  threat_analyzer.py  threat_clustering.py  threat_intelligence.py
config/: settings.py
docs/: README.md  project_overview.md  request_flow.md
gui/: client_settings_dialog.py  context_config.py  email_list_item.py  main_window.py  styles.qss  threat_dashboard.py
tests/: __init__.py  conftest.py  test_email_controller.py  test_email_scanner.py  test_local_ai_handler.py  test_ml_analyzer.py  test_proactive_defense.py  test_report_controller.py  test_threat_analyzer.py  test_threat_intelligence.py  test_traffic_light.py  test_utils.py
